# hoopl

./: .gitignore  .travis.yml  CHANGES  FAQ  HOWTO-BRANCHES  LICENSE  Makefile  NOTES  PROBLEMS  README  README.md  TODO  authors-response  bbl.dias.mk  bbl.nr.mk  bitly.nr.mk  bitly.simonpj.mk  changelog  changelog.md  code.sty  defuse  defuse.tex  dfopt.bbl  dfopt.bib  dfopt.tex  dfoptdu.tex  engine.tex  hoopl.cabal  hsprelude  logic.tex  mkfile  notes-relatedwork  old-implementation-sections.tex  popl-response.txt  popl10-reviews.txt  popl2010-reviews.txt  proto-response.txt  spell.mk  test.tex  validate
code/: Cunning3.hs  CunningTransfers.hs  Hoopl4.hs  Hoopl5.hs  Hoopl6.hs  Hoopl7.hs
paper/: .gitignore  Makefile  Rew.hs  bbl.simonpj.mk  bitly.nr.mk  defuse  dfopt.bib  dfopt.tex  dom.eps  haskell-reviews.txt  hsprelude  icfp2010response.txt  icfp2010reviews.html  latex.mk  mkfile  onepage.tex  refs.txt  spell.mk  xsource
private/: authors-response  icfp09.reviews
prototypes/: .gitignore  Hoopl.hs  Hoopl1.hs  Hoopl7.hs  RG.hs
src/: .gitignore  CHANGES  GNUmakefile  LICENSE  LOOPS  README  hoopl.cabal  mkfile  subdir.mk
src/Compiler/: Hoopl.hs
src/Compiler/Hoopl/: Block.hs  Checkpoint.hs  Collections.hs  Combinators.hs  Dataflow.hs  DataflowFold.hs  DataflowNest.hs  Debug.hs  Fuel.hs  GHC.hs  Graph.hs  GraphUtil.hs  Haddock.hs  Internals.hs  Label.hs  MkGraph.hs  OldDataflow.hs  Pointed.hs  Shape.hs  Show.hs  Stream.hs  TEST  Unique.hs  Util.hs  Wrappers.hs  XUtil.hs  ZipDataflow.hs  ZipDataflowNoRG.hs  Zipper.hs
src/Compiler/Hoopl/Passes/: DList.hs  Dominator.hs  Live.hs
testing/: Ast.hs  Ast2ir.hs  ConstProp.hs  CunningTransfers.hs  Eval.hs  EvalMonad.hs  Expr.hs  Hoopl.hs  IR.hs  Ir2ast.hs  Live.hs  Main.hs  OptSupport.hs  Parse.hs  README  Simplify.hs  Test.hs  mkfile
testing/tests/: ExpectedOutput  if-test  if-test.expected  if-test2  if-test3  if-test4  test1  test2  test3  test4  test4.expected
