Name:                hoopl
Version:             3.10.0.1
-- NOTE: Don't forget to update 'repository this' tag when incrementing version!
-- GHC 7.6.1 released with 3.9.0.0
-- version 3.8.6.0 is the version that goes with the camera-ready Haskell'10 paper
-- version 3.8.7.0 works with GHC 7
-- version 3.8.7.1 adds some unnamed functions without breaking compatibility
-- version 3.8.7.2 adds Compiler.Hoopl.Fuel.liftFuel
-- version 3.8.7.4 re-exports runWithFuel
-- version 3.9.0.0 adds the new API for working with blocks, and lots of internal refactoring
Description:
  Higher-order optimization library
  .
  See /Norman Ramsey, Joao Dias, and Simon Peyton Jones./
  <http://research.microsoft.com/en-us/um/people/simonpj/Papers/c--/hoopl-haskell10.pdf "Hoopl: A Modular, Reusable Library for Dataflow Analysis and Transformation"> /(2010)/ for more details.

License:             BSD3
License-File:        LICENSE
Author:              Norman Ramsey, Joao Dias, Simon Marlow and Simon Peyton Jones
Maintainer:          nr@cs.tufts.edu
Homepage:            http://ghc.cs.tufts.edu/hoopl/
Bug-Reports:         http://ghc.haskell.org/trac/ghc/newticket?component=libraries/hoopl
Build-Type:          Simple
Cabal-Version:       >=1.10
Synopsis:            A library to support dataflow analysis and optimization
Category:            Compilers/Interpreters
Tested-With:         GHC==7.6.3, GHC==7.6.2, GHC==7.6.1, GHC==7.4.2, GHC==7.4.1, GHC==7.2.2, GHC==7.0.4, GHC==7.0.3, GHC==7.0.2, GHC==7.0.1
Extra-Source-Files:  README, hoopl.pdf, changelog.md

Source-repository head
  Type:       git
  Location:   http://git.haskell.org/packages/hoopl.git

Source-repository this
  Type:       git
  Location:   http://git.haskell.org/packages/hoopl.git
  Tag:        hoopl-3.10.0.1-release

Library
  Default-Language:  Haskell2010
  Other-Extensions:  CPP
                     FlexibleContexts
                     FlexibleInstances
                     GADTs
                     LiberalTypeSynonyms
                     MultiParamTypeClasses
                     RankNTypes
                     ScopedTypeVariables
                     TypeFamilies
                     TypeSynonymInstances
  If impl(ghc>=7.2)
    Other-Extensions: Safe Trustworthy

  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4.3 && < 4.8, containers >= 0.4 && < 0.6
  Exposed-Modules:   Compiler.Hoopl,
                     Compiler.Hoopl.Internals,
                     Compiler.Hoopl.Wrappers,
                     Compiler.Hoopl.Passes.Dominator,
                     Compiler.Hoopl.Passes.DList
--                     Compiler.Hoopl.DataflowFold,
--                     Compiler.Hoopl.OldDataflow,

  -- The remaining modules are hidden *provisionally*
  Other-modules:     Compiler.Hoopl.Checkpoint,
                     Compiler.Hoopl.Collections,
                     Compiler.Hoopl.Combinators,
                     Compiler.Hoopl.Dataflow,
                     Compiler.Hoopl.Debug,
                     Compiler.Hoopl.Block,
                     Compiler.Hoopl.Graph,
                     Compiler.Hoopl.Label,
                     Compiler.Hoopl.MkGraph,
                     Compiler.Hoopl.Fuel,
                     Compiler.Hoopl.Pointed,
                     Compiler.Hoopl.Shape,
                     Compiler.Hoopl.Show,
                     Compiler.Hoopl.Unique,
                     Compiler.Hoopl.XUtil

  Ghc-Options:       -Wall -fno-warn-name-shadowing

