Name:                hoopl
Version:             3.7.7.0
Description:         Higher-order optimization library
License:             BSD3
License-file:        LICENSE
Author:              Norman Ramsey, João Dias, and Simon Peyton Jones
Maintainer:          nr@cs.tufts.edu
Build-Type:          Simple
Cabal-Version:       >=1.2
Stability:           alpha
Synopsis:            A library to support dataflow analysis and optimization
Category:            Compilers/Interpreters
Extra-source-files:  README, hoopl.pdf, CHANGES

Library
  Build-Depends:     base >= 3 && < 5, containers
  Exposed-modules:   Compiler.Hoopl
  Other-modules:     Compiler.Hoopl.GraphUtil,
                     -- GraphUtil should *never* be seen by clients.
                     -- The remaining modules are hidden *provisionally*
                       Compiler.Hoopl.Dataflow, Compiler.Hoopl.Graph, 
                       Compiler.Hoopl.MkGraph,
                       Compiler.Hoopl.Fuel, Compiler.Hoopl.Label,
                       Compiler.Hoopl.Util
  ghc-options:       -Wall -fno-warn-name-shadowing
